<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:text="@string/pick_image_from"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"

        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_gallery_green"
        android:id="@+id/btnGallery"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/gallery"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:id="@+id/btnCamera"
        android:background="@android:color/white"
        android:src="@drawable/ic_camera_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>