<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relaImage"
                    android:layout_width="120dp"
                    android:layout_height="190dp"
                    android:layout_margin="4dp">

                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:visibility="visible" />

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnPickImage"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_person" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EEEEEE"
                        android:hint="@string/write_some_description"
                        android:inputType="textCapSentences|textMultiLine"
                        android:paddingStart="5dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnUpload"
                android:text="@string/upload" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cardTop"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvReports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/reports"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReports"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:scrollbars="none">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>